@@ -45,7 +45,10 @@
 #'            }
 #'            for further use.
 #'
-#' @note See 'Notes' in \code{\link{sjt.frq}}.
+#' @note Standard errors for generalized linear models are adjusted according to
+#'       the delta method for approximating standard error of transformed 
+#'       regression parameters (see \code{\link[sjstats]{se}}).
+#'       \cr \cr Futhermore, see 'Notes' in \code{\link{sjt.frq}}.
 #'
 #' @details See 'Details' in \code{\link{sjt.frq}}.
 #'
@@ -160,10 +163,11 @@
 #' # print models with different predictors
 #' sjt.glm(fit, fit2, fit3, group.pred = FALSE)}
 #'
-#' @importFrom dplyr full_join slice
+#' @importFrom dplyr full_join slice mutate
 #' @importFrom stats nobs AIC confint coef logLik family deviance
-#' @importFrom sjstats std_beta icc r2 cod chisq_gof hoslem_gof
+#' @importFrom sjstats std_beta icc r2 cod chisq_gof hoslem_gof se
 #' @importFrom tibble lst
+#' @importFrom broom tidy
 #' @export
 sjt.glm <- function(...,
                     pred.labels = NULL,
@@ -307,8 +311,19 @@ sjt.glm <- function(...,
       fit.df <- sjstats::robust(fit, conf.int = T, exponentiate = F) %>% 
         dplyr::select_("-statistic")
     } else {
-      fit.df <- broom::tidy(fit, effects = "fixed", conf.int = T) %>% 
-        dplyr::select_("-statistic")
+      if (is_merMod(fit)) {
+        fit.df <- broom::tidy(fit, effects = "fixed", conf.int = T) %>% 
+          dplyr::select_("-statistic")
+      } else {
+        fit.df <- broom::tidy(fit, effects = "fixed", conf.int = T) %>% 
+          # remove non-transformed standard error
+          dplyr::select_("-statistic", "-std.error") %>% 
+          # get adjusted standard errors
+          dplyr::mutate(std.error = sjstats::se(fit)[["or.se"]])
+        
+        # reorder df
+        fit.df <- fit.df[, c(1:2, 6, 3:5)]
+      }
     }
     # -------------------------------------
     # write data to data frame. we need names of
